Added the BeautifulSoup module.  It sites screen scraping as one of its ideal uses.  Lucky me.  Also moving into the realm of getting the availability checking page up.  And getting to a point where I am nervous to proceed with no tests.

--- a/AppEngine/app.yaml
+++ b/AppEngine/app.yaml
@@ -9,7 +9,7 @@ handlers:
   script: pcs/login.py
 
 - url: /newreservation
-  script: pcs/login.py
+  script: pcs/newreservation.py
 
 - url: /cookies
   script: pcs/login.py
