moved modules into new structure (data/view/wsgi -- like model/view/controller, except wsgi isn't exactly controller.  it's just that I know that wsgi is the only input interface i'll be using, so i'll conflate the two).

--- a/AppEngine/app.yaml
+++ b/AppEngine/app.yaml
@@ -1,4 +1,4 @@
-application: crowded-market
+application: phillycarshare-processor
 version: 1
 runtime: python
 api_version: 1
@@ -13,4 +13,8 @@ handlers:
 
 - url: /cookies
   script: pcs/login.py
+
+- url: /test.*
+  login: admin
+  script: gaeunit.py
 
