Refactored project packages to reflect the idea that a request comes from some INPUT, the information to satisfy the request is retrieved from some SOURCE and stored in the project's DATA format, and then that data is returned to the requester by some VIEW.

--- a/AppEngine/app.yaml
+++ b/AppEngine/app.yaml
@@ -10,11 +10,11 @@ handlers:
   script: gaeunit.py
 
 - url: /login
-  script: pcs/wsgi/login.py
+  script: pcs/input/wsgi/login.py
 
 - url: /newreservation
-  script: pcs/wsgi/newreservation.py
+  script: pcs/input/wsgi/newreservation.py
 
 - url: /cookies
-  script: pcs/wsgi/login.py
+  script: pcs/input/wsgi/login.py
 
