created a "session" url for requesting overview information about a session.  requires either username and password, or the presence of a valid session cookie.

--- a/AppEngine/app.yaml
+++ b/AppEngine/app.yaml
@@ -12,6 +12,9 @@ handlers:
 - url: /login
   script: pcs/input/wsgi/login.py
 
+- url: /session
+  script: pcs/input/wsgi/session.py
+
 - url: /newreservation
   script: pcs/input/wsgi/newreservation.py
 
