--- a/AppEngine/app.yaml
+++ b/AppEngine/app.yaml
@@ -1,4 +1,4 @@
-application: phillycarshare-processor
+application: phillycarshare-api-kwawatu
 version: 1
 runtime: python
 api_version: 1
@@ -20,6 +20,12 @@ handlers:
 
 - url: /availability.*
   script: pcs/input/wsgi/availability.py
+
+- url: /locations.*
+  script: pcs/input/wsgi/locations.py
+
+- url: /styles
+  static_dir: styles
 
 - url: /cookies
   script: pcs/input/wsgi/login.py
