Added the reservations input and source modules.  Filled in the get handler for reservations.  There are two request handlers in the input module.  One is for 'http://.../reservations.html' -- GET will respond with a list of the reservations for the current account/session, and POST will create a new reservation.  The other is for 'http://.../reservations/[reservationid].html' -- GET will respond with information about that particular reservation, PUT will edit the reservation, and DELETE will cancel the reservation.

--- a/AppEngine/app.yaml
+++ b/AppEngine/app.yaml
@@ -17,8 +17,8 @@ handlers:
   script: pcs/input/wsgi/session.py
   secure: optional
 
-- url: /newreservation.*
-  script: pcs/input/wsgi/newreservation.py
+- url: /reservations.*
+  script: pcs/input/wsgi/reservations.py
   secure: never
 
 - url: /availability.*
