Added locations and vehicles availability handlers.  Location availability returns the list of available pods/vehicles near a location.  Vehicle availability returns the availability of a vehicle.

--- a/AppEngine/app.yaml
+++ b/AppEngine/app.yaml
@@ -21,7 +21,11 @@ handlers:
   script: pcs/input/wsgi/reservations.py
   secure: never
 
-- url: /availability.*
+- url: /locations/.*/availability.*
+  script: pcs/input/wsgi/availability.py
+  secure: never
+
+- url: /vehicles/.*/availability.*
   script: pcs/input/wsgi/availability.py
   secure: never
 
