Fixed the target for miscellaneous addresses in app.yaml.  was '/*', changed to '/.*' (cause it's a reg ex)

--- a/app.yaml
+++ b/app.yaml
@@ -23,7 +23,7 @@ handlers:
 - url: /cookies
   script: pcs/input/wsgi/login.py
 
-- url: /*
+- url: /.*
   script: pcs/appengine_app.py
   secure: never
 
