Now with version number!  From hence forth I'll use [major].[minor].[master commit].  And since this is the first version number I'm using, I'll just treat this as master commit #1.

--- a/app.yaml.template
+++ b/app.yaml.template
@@ -2,7 +2,7 @@
 # Copy this file to app.yaml.  Fill in your appengine application name:
 #
 application: [app-name]
-version: [app-version]
+version: 0.1.001
 runtime: python
 api_version: 1
 
